--- a/frontend/nginx.default.conf
+++ b/frontend/nginx.default.conf
@@ -5,7 +5,7 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    server_name _; # all hostnames
+    server_name _;
 
     location / {
         try_files $uri /index.html;
